[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/void/void.gd" type="Script" id=1]
[ext_resource path="res://Resources/Textures/placeholders/white.png" type="Texture" id=2]

[sub_resource type="ParticlesMaterial" id=1]

resource_local_to_scene = true
render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 8.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.8
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = -50.0
radial_accel_random = 0.0
tangential_accel = 50.0
tangential_accel_random = 0.0
damping = 20.0
damping_random = 1.0
angle = 45.0
angle_random = 1.0
scale = 3.0
scale_random = 1.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Flags", "Resource", "Spread" ]

[sub_resource type="ParticlesMaterial" id=2]

resource_local_to_scene = true
render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 16.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.8
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = -50.0
radial_accel_random = 0.0
tangential_accel = 50.0
tangential_accel_random = 0.0
damping = 20.0
damping_random = 1.0
angle = 45.0
angle_random = 1.0
scale = 2.0
scale_random = 1.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Resource", "Spread" ]

[sub_resource type="GDScript" id=3]

script/source = "tool
extends Sprite
func _ready(): set_process(true)
func _process(delta): self.rotation += delta"

[sub_resource type="GDScript" id=4]

script/source = "tool
extends Sprite
### Void
func _ready(): set_process(true)
func _process(delta): self.rotation -= delta"

[sub_resource type="GDScript" id=5]

script/source = "tool
extends Sprite
### Void
func _ready(): set_process(true)
func _process(delta): self.rotation += delta"

[sub_resource type="GDScript" id=6]

script/source = "tool
extends Sprite
### Void
func _ready(): set_process(true)
func _process(delta): self.rotation -= delta"

[sub_resource type="CircleShape2D" id=7]

resource_local_to_scene = true
custom_solver_bias = 0.0
radius = 16.0
_sections_unfolded = [ "Resource" ]

[node name="void" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="tmr_duration" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="twn_begin" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="twn_end" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="particles_darker" type="Particles2D" parent="." index="3"]

modulate = Color( 0.0588235, 0.219608, 0.0588235, 1 )
emitting = false
amount = 25
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 1 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time", "Visibility" ]

[node name="particles_lighter" type="Particles2D" parent="." index="4"]

modulate = Color( 0.188235, 0.384314, 0.188235, 1 )
emitting = false
amount = 30
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time", "Visibility" ]

[node name="void" type="Sprite" parent="." index="5"]

scale = Vector2( 32, 32 )
_sections_unfolded = [ "Transform" ]

[node name="layer_1" type="Sprite" parent="void" index="0"]

editor/display_folded = true
modulate = Color( 0.0588235, 0.219608, 0.0588235, 1 )
rotation = 2826.4
script = SubResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="sprite" type="Sprite" parent="void/layer_1" index="0"]

rotation = 0.785398
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="sprite2" type="Sprite" parent="void/layer_1" index="1"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="layer_2" type="Sprite" parent="void" index="1"]

editor/display_folded = true
modulate = Color( 0.188235, 0.384314, 0.188235, 1 )
rotation = -2772.6
scale = Vector2( 0.5, 0.5 )
script = SubResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="sprite" type="Sprite" parent="void/layer_2" index="0"]

rotation = 0.785398
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="sprite2" type="Sprite" parent="void/layer_2" index="1"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="layer_3" type="Sprite" parent="void" index="2"]

editor/display_folded = true
modulate = Color( 0.0588235, 0.219608, 0.0588235, 1 )
rotation = 2772.6
scale = Vector2( 0.25, 0.25 )
script = SubResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="sprite" type="Sprite" parent="void/layer_3" index="0"]

rotation = 0.785398
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="sprite2" type="Sprite" parent="void/layer_3" index="1"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="layer_4" type="Sprite" parent="void" index="3"]

editor/display_folded = true
modulate = Color( 0.188235, 0.384314, 0.188235, 1 )
rotation = -2772.6
scale = Vector2( 0.125, 0.125 )
script = SubResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="sprite" type="Sprite" parent="void/layer_4" index="0"]

rotation = 0.785398
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="sprite2" type="Sprite" parent="void/layer_4" index="1"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="collision_shape_2d" type="CollisionShape2D" parent="." index="6"]

shape = SubResource( 7 )
disabled = true

[connection signal="body_entered" from="." to="." method="_on_void_body_entered"]

[connection signal="timeout" from="tmr_duration" to="." method="_on_tmr_duration_timeout"]

[connection signal="tween_completed" from="twn_begin" to="." method="_on_twn_begin_tween_completed"]

[connection signal="tween_completed" from="twn_end" to="." method="_on_twn_end_tween_completed"]


